# lem

./: .gitignore  AGPL-FAQ.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-FAQ.md  NOTICE  README.md
cloud/relay/: .env.example  Dockerfile  README.md  pyproject.toml  test_relay.py
cloud/relay/app/: __init__.py  main.py
cloud/relay/app/api/: __init__.py  health.py  relay.py
cloud/relay/app/core/: __init__.py  config.py  security.py  session_manager.py
cloud/relay/app/models/: __init__.py
cloud/relay/tests/: __init__.py
cloud/signaling/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
cloud/signaling/app/: __init__.py  main.py
cloud/signaling/app/api/: __init__.py  auth.py  devices.py  health.py  signal.py
cloud/signaling/app/core/: __init__.py  config.py  security.py
cloud/signaling/app/db/: __init__.py  database.py
cloud/signaling/app/models/: __init__.py  schemas.py
cloud/signaling/tests/: __init__.py  test_api.py
deploy/: README.md
deploy/aws/: CREDENTIALS.md  README.md
deploy/aws/cdk/: .gitignore  README.md  cdk.context.json  cdk.json  package.json  pnpm-lock.yaml
deploy/aws/cdk/lib/: lem-infra-stack.ts
deploy/aws/manual/: GUIDE.md
deploy/docker/: README.md  docker-compose.yml  nginx.conf
deploy/scripts/: build-and-push.sh
deploy/self-hosting/: README.md
deploy/self-hosting/nginx/: relay.conf  signaling.conf
deploy/self-hosting/systemd/: lem-relay.service  lem-signaling.service
scripts/: launch_servers.sh
server/: README.md  pyproject.toml  test_db.py
server/app/: __init__.py  db.py  main.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py  auth.py
server/app/drivers/: harbor_wrapper.py
server/app/drivers/clients/: __init__.py  openwebui.py
server/app/drivers/runners/: __init__.py  ollama.py
server/app/tunnel/: README.md  __init__.py  http_frame.py  http_proxy.py  manager.py  message_dispatcher.py  relay_client.py  router.py  webrtc_client.py  ws_frame.py  ws_proxy.py
server/examples/: tunnel_example.py
server/tests/tunnel/: __init__.py  test_http_frame.py  test_relay_fallback.py  test_webrtc_client.py
web/local/: package.json  pnpm-lock.yaml
web/local/src/: App.tsx  index.css  main.tsx
web/local/src/api/: client.ts  types.ts
web/local/src/components/: ClientsList.tsx  ModelPull.tsx  RemoteAccess.tsx  RunnersList.tsx
web/local/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
web/local/src/hooks/: useClients.ts  useModels.ts  useRunners.ts  useTunnel.ts
web/remote/: .env.example  .env.production.example  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
web/remote/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/remote/src/api/: auth.test.ts  auth.ts  types.ts
web/remote/src/components/: APITester.tsx  ClientSelector.tsx  ClientViewer.tsx  ConnectionStatus.tsx  DeviceSelector.tsx  Login.tsx
web/remote/src/components/ui/: badge.tsx  separator.tsx
web/remote/src/hooks/: useAuth.ts  useWebRTC.ts
web/remote/src/lib/: http-frame.test.ts  http-frame.ts  proxy-fetch.ts  relay-client.ts  utils.ts  webrtc.test.ts  webrtc.ts  websocket-intercept.ts  ws-frame.ts  ws-proxy.ts
